# pgc-rust

./: .gitignore  PGC_Leandro_Diomar_Gomes da Silva_11201920905.tex  README.md  Victor_Cobo_PGC.aux  Victor_Cobo_PGC.bbl  Victor_Cobo_PGC.blg  Victor_Cobo_PGC.lof  Victor_Cobo_PGC.lot  Victor_Cobo_PGC.synctex(busy)  Victor_Cobo_PGC.tex  Victor_Cobo_PGC.toc  entrada.csv  references.bib  run_experiments.sh  start_all.sh
LoRa/: Cargo.toml
LoRa/src/: main.rs
analise-experimentos/: analise_experimentos.md
analise-experimentos/experimento-1/: estatisticas_compressao_lote_20000.json  estatisticas_compressao_lote_60.json
analise-experimentos/experimento-2/: estatisticas_compressao_lote_60.json  estatisticas_compressao_lote_720.json
analise-experimentos/experimento-3/: estatisticas_compressao_lote_60.json
gerador-de-dados/: dados_sinteticos-1.csv  dados_sinteticos-2.csv  dados_sinteticos.csv  gerar_dados_sinteticos.py  gerar_graficos_artigo.py  output.txt  validar_dados_rust.py
processador/: Cargo.toml
processador/src/: main.rs
receiver/: Cargo.toml
receiver/src/: main.rs
relatorio/: Victor_Cobo_PGC.aux  Victor_Cobo_PGC.blg  Victor_Cobo_PGC.lof  Victor_Cobo_PGC.lot  Victor_Cobo_PGC.tex  Victor_Cobo_PGC.toc  references.bib  walkthrough-comparacao-dados-gerados-rust.md
relatorio/analise-experimentos/: comparacao_experimentos.md
relatorio/analise-experimentos/experimento-1/: dados_sinteticos_gerados_rust.csv  estatisticas_compressao_lote_4320.json  estatisticas_compressao_lote_720.json
simulador/: Cargo.toml
simulador/src/: main.rs
(+7 files in other folders)
