[package]
name = "processador"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.3"
hyper_wasi = { version = "0.15", features = ["full"] }
tokio_wasi = { version = "1", features = ["io-util", "fs", "net", "time", "rt", "macros"] }
reqwest_wasi = { version = "0.11", features = ["json"] }
chrono = "0.4"
csv = "1.2"
rand = "0.8"